--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li class="mobile-exit" id="mobile-menu-exit">X</li>
                 <li class="option"><a href="#">Startseite</a></li>
                 <li class="option"><a class="current" href="#">Über uns</a></li>
-                <li class="option"><a href="/form/form.html">Kontakt</a></li>
+                <li class="option"><a href="https://bartoszsiedlecki.github.io/Vue-Form/">Kontakt</a></li>
             </ul>
             <div class="mobile-menu" id="mobile-menu-btn">
                 <div class="line"></div>
